laravel/public/css/global.css
/* ... */
.Add-Payment-blocks{ margin:20px 0px 50px 0; }
.FontStyle16{ font-size:16px; }

.toplink a{ font-family:'robotomedium', Arial, Helvetica, sans-serif; font-size:12px; color:#f38918; text-decoration:underline; font-style:italic; float:right; }
.toplink a:hover{ color:#2b2b2b; text-decoration:none; font-style:italic; }

/* My Account */


#Bannerblock2 .Header-Account-info span{ font-family:'robotomedium', Arial, Helvetica, sans-serif; font-size:14px; color:#f38918; } 
#Bannerblock2 .Header-Account-info a{ font-family:'robotomedium', Arial, Helvetica, sans-serif; font-size:15px; color:#2b2b2b; text-decoration:none; }
#Bannerblock2 .Header-Account-info a:hover{ color:#f38918; text-decoration:none; }
.color1{ color:#f38918; }  


.search-box{ width:auto; height:auto; padding:20px 15px 10px 15px; background:#f38918; margin:15px auto; }
.search-box .textbox01{ background:#fff; width:100%; height:30px; color:#2b2b2b; font-family: 'Roboto', sans-serif;  font-weight:200; font-size:20px; padding:8px; border:0px; height:42px;  border-radius:0px; }

.btn-primary2 {
    background-color: #333 !important;
    color: #FFFFFF;
}
.btn-primary2:hover {
    background-color: #666 !important;
    color: #FFFFFF;
}

.Category-block{ width:100%; height:auto; padding:0px; margin:0px; }
.Category-block .title01{ background:#f38918; width:40px; height:40px; text-align:center; font-family: 'Roboto', sans-serif;  font-weight:200; font-size:24px; color:#fff; margin-bottom:15px; padding:10px 0 0 0; }
.Category-block ul{ clear:both; padding:0px; margin:0px auto 15px auto; width:100%; }
.Category-block ul li{ list-style:none; line-height:30px; font-family: 'Roboto', sans-serif;  font-weight:200; color:#f38918;}
.Category-block ul li a{ font-family: 'Roboto', sans-serif;  font-weight:200; color:#A06122; text-decoration:none; font-size:15px; cursor:pointer; }
.Category-block ul li a:hover{ color:#2b2b2b; text-decoration:none; cursor:pointer; }

.how-it-works-Boxs{ padding:15px 0 0 0; text-align:center; display:block; width:auto; height:281px; box-shadow:#ccc 0px 0 5px ; margin-bottom:30px; background:#fff;  }
.how-it-works-Boxs div{ text-align:center; padding:0 0 10px 0; width:auto; height:auto; }
.how-it-works-Boxs p{ text-align:center; padding:0px 15px; width:auto; height:auto; }

.media-img, .media-text{ text-align:left; }
.online-checkbox{ color: #FFFFFF;
				  float: right;
				  line-height: 13px;
				  margin-top: 31px;
				  text-align: right; }

.Search-filter-Block{ height:auto; background:#fff; padding:20px 15px; border-top:4px solid #e27807; 
					  box-shadow:#ccc 0px 0 5px ; margin:0px 15px 30px 0px; }
.search-result-box{ height:365px; background:#fff; padding:20px 15px; border-top:4px solid #e27807; 
					box-shadow:#ccc 0px 0 5px ; margin:0px 15px 30px 0px; }

.search-result-img{  height: 117px;
					 margin-top: -92px; margin-left:auto; margin-right:auto;
					 width: 117px; } 

.search-result-title{ text-align:center; margin-top: 10px; }
.search-result-details{ text-align:left; font-size:13px; color:#2b2b2b; line-height:20px; margin-top:10px; height:75px;  }
.search-result-options{ clear:both; margin:18px 0 0 0; position: relative; top: -30px; }

.option-pro{ background:url(/images/options.jpg) no-repeat -4px -2px; width:15px; height:15px; display:inline-block; cursor:pointer; margin:0px 2px; -webkit-transition: All 400ms linear; -moz-transition: All 400ms linear; -ms-transition: All 400ms linear; -o-transition: All 400ms linear;	transition: All 400ms linear;  }
.option-pro:hover{ background:url(/images/options.jpg) no-repeat -4px -23px; width:15px; height:15px; display:inline-block; cursor:pointer; margin:0px 2px; -webkit-transition: All 400ms linear; -moz-transition: All 400ms linear; -ms-transition: All 400ms linear; -o-transition: All 400ms linear; transition: All 400ms linear;  }

.option-chat{ background:url(/images/options.jpg) no-repeat -4px -44px; width:15px; height:15px; display:inline-block; cursor:pointer; margin:0px 2px; -webkit-transition: All 400ms linear; -moz-transition: All 400ms linear; -ms-transition: All 400ms linear; -o-transition: All 400ms linear;	transition: All 400ms linear;  }
.option-chat:hover{ background:url(/images/options.jpg) no-repeat -4px -64px; width:15px; height:15px; display:inline-block; cursor:pointer; margin:0px 2px; -webkit-transition: All 400ms linear; -moz-transition: All 400ms linear; -ms-transition: All 400ms linear; -o-transition: All 400ms linear; transition: All 400ms linear;  }

.option-pro a, .option-chat a, .option-msg a{ display:block; width:15px; height:15px; }
.option-msg{ background:url(/images/options.jpg) no-repeat -4px -88px; width:15px; height:15px; display:inline-block; cursor:pointer; margin:0px 2px; -webkit-transition: All 400ms linear; -moz-transition: All 400ms linear; -ms-transition: All 400ms linear; -o-transition: All 400ms linear;	transition: All 400ms linear;  }
.option-msg:hover{ background:url(/images/options.jpg) no-repeat -4px -108px; width:15px; height:15px; display:inline-block; cursor:pointer; margin:0px 2px; -webkit-transition: All 400ms linear; -moz-transition: All 400ms linear; -ms-transition: All 400ms linear; -o-transition: All 400ms linear; transition: All 400ms linear;  }

.mar-left15{ margin-left:15px; }
.Lesson-row{ width:100%; height:auto; padding:11px 10px; margin:0px; clear:both; background:#fff; border-bottom:1px solid #e7e7e7; cursor:pointer; }
.Lesson-row:last-child { border-bottom: 0; }
.Lesson-row:hover{ background:#f4f2f2; }
.Lesson-row.active{ background:#fcddbc; }


.Lesson-row .tutor-name{ font-size:12px; padding-top:10px; }
.Lesson-row .tutorimg{ text-align:center; }
.Lesson-row .date{ font-size:12px; color:#2b2b2b; padding-top:10px; }
.Lesson-row .time{ font-size:11px; color:#2b2b2b; padding-top:10px;}
.Lesson-row .mins{ font-size:11px; color:#2b2b2b; padding-top:10px;}
.Lesson-row .subject{ font-size:12px; color:#2b2b2b; padding-top:10px;}
/* ... */

